--- a/index.html
+++ b/index.html
@@ -162,33 +162,46 @@
 }
 .event_cont{
 	position: relative;
-	display: inline-block;
-	width: 250px;
-	height: 280px;
-	padding: 10px 0;
-	overflow: hidden;
-	background-color: #eee;
-	background-position: bottom;
-	margin: 25px;
-	box-shadow: 4px 4px 20px -2px #222;
-	cursor:pointer;
+    display: inline-block;
+   	width: 400px;
+   	height: 300px;
+    padding: 10px 0;
+    overflow: hidden;
+    background-color: #eee;
+    background-position: bottom;
+    margin: 25px;
+    box-shadow: 4px 4px 20px -2px #222;
+    cursor: pointer;
+
 }
-.event_head{
-	font-size: 20px;
+
+.event_cont:hover>.event_head1
+{
+	transform:translateY(-61px);
+}
+
+.event_head1{
+	    font-size: 20px;
     line-height: 30px;
     font-weight: bold;
     height: 60px;
     position: absolute;
-    top: 0;
+    bottom: -63px;
     padding: 15px;
     width: 100%;
-    color:#fff;
+    color: #fff;
+    background:red;
+    z-index: 1000;
+    transition:transform 300ms;
+    -webkit-transition:-webkit-transform 300ms;
 }
+
+
 .event_details{
 	position: absolute;
 	width: 100%;
 	left:0;
-	top: 60px;
+	top: 0px;
 	bottom:0;
 	color: #eee;
 	text-align: left;
@@ -202,8 +215,14 @@
 
 }
 .event_details img{
+	max-width: none;
 	width: 100%;
-	height: 100%;
+	-webkit-transition: -webkit-transform 300ms;
+	transition:transform 300ms;
+}
+ .event_details:hover
+{
+	transform:translateY(-30px);
 }
 .eve_det_front{
 position: absolute;
@@ -243,31 +262,9 @@ position: absolute;
   pointer-events: none;
   line-height: 160px;
 }
-.event_details[data-direction="left"] .eve_det_back,
-.event_details[data-direction="right"] .eve_det_back {
-  -webkit-transform: translateZ(-2px) rotateY(180deg);
-          transform: translateZ(-2px) rotateY(180deg);
-}
-
-
-.event_details[data-direction="top"].is-open {
+.event_details.is-open {
   -webkit-transform: rotateX(180deg);
           transform: rotateX(180deg);
-}
-
-.event_details[data-direction="right"].is-open {
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-}
-
-.event_details[data-direction="bottom"].is-open {
-  -webkit-transform: rotateX(-180deg);
-          transform: rotateX(-180deg);
-}
-
-.event_details[data-direction="left"].is-open {
-  -webkit-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
 }
 /*Events End*/
 </style>
@@ -339,7 +336,7 @@ position: absolute;
 	<div class="div_title">Events</div>
 	<div class="contact_data">
 		<div class="event_cont slide">
-			<div class="event_head size">Hackthon</div>
+			<div class="event_head1">Hackthon</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -350,7 +347,7 @@ position: absolute;
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head size">Reverse Engineering</div>
+			<div class="event_head1">Reverse Engineering</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -362,7 +359,7 @@ position: absolute;
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head size">Dhiti</div>
+			<div class="event_head1">Dhiti</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -373,7 +370,7 @@ position: absolute;
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head size">FTGP</div>
+			<div class="event_head1">FTGP</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -384,7 +381,7 @@ position: absolute;
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head size">RAW</div>
+			<div class="event_head1">RAW</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -395,7 +392,7 @@ position: absolute;
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head size">I-strike</div>
+			<div class="event_head1">I-strike</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -406,7 +403,7 @@ position: absolute;
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head size">AIC</div>
+			<div class="event_head1">AIC</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/dhiti.jpg">
@@ -568,44 +565,12 @@ var btnFront = $('.eve_det_front'),
     btnBack = $('.eve_det_back');
 btnFront.click(function(event) {
 	var btn = $(this).parent();
-    var mx = event.clientX - btn.offsetLeft,
-        my = event.clientY - btn.offsetTop;
-    var w = btn.offsetWidth,
-        h = btn.offsetHeight;
-    var directions = [{
-        id: 'top',
-        x: w / 2,
-        y: 0
-    }, {
-        id: 'right',
-        x: w,
-        y: h / 2
-    }, {
-        id: 'bottom',
-        x: w / 2,
-        y: h
-    }, {
-        id: 'left',
-        x: 0,
-        y: h / 2
-    }];
-    directions.sort(function(a, b) {
-        return distance(mx, my, a.x, a.y) - distance(mx, my, b.x,
-            b.y);
-    });
-    btn.attr('data-direction', directions.shift().id);
     btn.addClass('is-open');
 });
 btnBack.click(function(event) {
 	var btn = $(this).parent();
     btn.removeClass('is-open');
 });
-
-function distance(x1, y1, x2, y2) {
-    var dx = x1 - x2;
-    var dy = y1 - y2;
-    return Math.sqrt(dx * dx + dy * dy);
-}
 </script>
 <script type="text/javascript">
 function initMap() {
