--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 
 
+	<link rel="stylesheet" type="text/css" href="css/loader.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
@@ -45,9 +46,15 @@
     -webkit-transform: scale(0, 0) translateY(0);
             transform: scale(0, 0) translateY(0);
   }
-  55%, 100% {
+  55%, 99.9% {
     -webkit-transform: scale(1, 1) translateY(0);
             transform: scale(1, 1) translateY(0);
+    background-color: #eee;
+  }
+  100%{
+  	-webkit-transform: scale(1, 1) translateY(0);
+            transform: scale(1, 1) translateY(0);
+  	background-color: transparent;
   }
 }
 @keyframes slide {
@@ -55,29 +62,15 @@
     -webkit-transform: scale(0, 0) translateY(0);
             transform: scale(0, 0) translateY(0);
   }
-  55%, 100% {
+  55%, 99.99% {
     -webkit-transform: scale(1, 1) translateY(0);
             transform: scale(1, 1) translateY(0);
+    background-color: #eee;
   }
-}
-@-webkit-keyframes size {
-  0%, 55% {
-    -webkit-transform: scale(1, 0);
-            transform: scale(1, 0);
-  }
-  65%, 100% {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
-  }
-}
-@keyframes size {
-  0%, 55% {
-    -webkit-transform: scale(1, 0);
-            transform: scale(1, 0);
-  }
-  65%, 100% {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
+  100%{
+  	-webkit-transform: scale(1, 1) translateY(0);
+            transform: scale(1, 1) translateY(0);
+  	background-color: transparent;
   }
 }
 @-webkit-keyframes zoom {
@@ -121,48 +114,34 @@ body{
 	-webkit-animation-duration: 4s;
 			animation-duration: 4s;
 }
-.size{
--webkit-transform: scale(1, 0);
-            transform: scale(1, 0);
-  -webkit-transform-origin: 0 0;
-      -ms-transform-origin: 0 0;
-          transform-origin: 0 0;
-  -webkit-animation-name: size;
-          animation-name: size;
-  -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-  -webkit-animation-timing-function: ease;
-          animation-timing-function: ease;
-          animation-fill-mode: forwards;
-}
 
-.event_cont:nth-child(2), .event_cont:nth-child(2) .size, .event_cont:nth-child(2) .zoom {
+.event_cont:nth-child(2), .event_cont:nth-child(2) .zoom {
   -webkit-animation-delay: .2s;
           animation-delay: .2s;
 }
-.event_cont:nth-child(3), .event_cont:nth-child(3) .size, .event_cont:nth-child(3) .zoom {
+.event_cont:nth-child(3), .event_cont:nth-child(3) .zoom {
   -webkit-animation-delay: .4s;
           animation-delay: .4s;
 }
-.event_cont:nth-child(4), .event_cont:nth-child(4) .size, .event_cont:nth-child(4) .zoom {
+.event_cont:nth-child(4),, .event_cont:nth-child(4) .zoom {
   -webkit-animation-delay: .6s;
           animation-delay: .6s;
 }
-.event_cont:nth-child(5), .event_cont:nth-child(5) .size, .event_cont:nth-child(5) .zoom {
+.event_cont:nth-child(5), .event_cont:nth-child(5) .zoom {
   -webkit-animation-delay: .8s;
           animation-delay: .8s;
 }
-.event_cont:nth-child(6), .event_cont:nth-child(6) .size, .event_cont:nth-child(6) .zoom {
+.event_cont:nth-child(6), .event_cont:nth-child(6) .zoom {
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
-.event_cont:nth-child(7), .event_cont:nth-child(7) .size, .event_cont:nth-child(7) .zoom {
+.event_cont:nth-child(7), .event_cont:nth-child(7) .zoom {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
 }
 /*Events*/
 #events{
-	background-color: #3a3035;
+	background-color: #068271;
 }
 .event_cont{
 	position: relative;
@@ -185,7 +164,7 @@ body{
 }
 
 .event_head1{
-	    font-size: 20px;
+	font-size: 20px;
     line-height: 30px;
     font-weight: bold;
     height: 60px;
@@ -195,7 +174,7 @@ body{
     width: 100%;
     color: #fff;
     background:red;
-    z-index: 1000;
+    z-index: 10;
     transition:transform 300ms;
     -webkit-transition:-webkit-transform 300ms;
 }
@@ -221,47 +200,34 @@ body{
 .event_details img{
 	max-width: none;
 	width: 100%;
-	-webkit-transition: -webkit-transform 300ms;
-	transition:transform 300ms;
 }
  .event_details:hover
 {
 	transform:translateY(-30px);
 }
 .eve_det_front{
-position: absolute;
+	position: absolute;
 	display: block;
 	width: 100%;
 	height: 100%;
-	line-height: 80px;
-	background-color: #F44336;
-	color: #fff;
 	cursor: pointer;
-	-webkit-backface-visibility: hidden;
-	   -moz-backface-visibility: hidden;
-			backface-visibility: hidden;
 }
 .eve_det_back{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	padding:20px;
+	padding:30px;
 	background-color: #f6f6f6;
 	color: #222;
+	-moz-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 	-webkit-transform: translateZ(-2px) rotateX(180deg);
 			transform: translateZ(-2px) rotateX(180deg);
-	overflow: hidden;
 	-webkit-transition: box-shadow 0.8s ease;
 			transition: box-shadow 0.8s ease;
 }
-.eve_det_back>div
-{
-	height: 180px;
-    overflow: hidden;
-	font-size: 14px;
-    line-height: 18px;
-    font-weight: 400;
-}
+
 .event_details.is-open .eve_det_front {
   pointer-events: none;
   line-height: 160px;
@@ -273,6 +239,10 @@ position: absolute;
 /*Events End*/
 </style>
 <body>
+<!-- <div class="load" style="z-index: 1000">
+   <div class="dot"></div>
+   <div class="outline"><span></span></div>
+</div> -->
 <button id="nav_but" class="c-hamburger c-hamburger--htx">
 	<span>Menu</span>
 </button>
@@ -343,7 +313,7 @@ position: absolute;
 			<div class="event_head1">Hackthon</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/hack.png">
 				</div>
 				<div class="eve_det_back">
 					<div>Hackathon is an onsite mobile app building competition. Participants are required to code a mobile application on the platform and theme stated from scratch during the 12 hour overnight event. Hackers build the app in teams, enjoying pizza, coffee and refreshments overnight and the best applications are declared winners.</div>
@@ -354,7 +324,7 @@ position: absolute;
 			<div class="event_head1">Reverse Engineering</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/reverseEng.png">
 				</div>
 				<div class="eve_det_back">
 					<div>Ever wondered how a mechanism works. Reverse Engineering brings you the opportunity to get your hands on the most complex mechanical units. Engineer your ways to revert the impossible.
@@ -366,7 +336,7 @@ position: absolute;
 			<div class="event_head1">Dhiti</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/dhiti.png">
 				</div>
 				<div class="eve_det_back">
 					<p>this is a event in apogee. ob max.</p>
@@ -377,7 +347,7 @@ position: absolute;
 			<div class="event_head1">FTGP</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/ftgp.png">
 				</div>
 				<div class="eve_det_back">
 					<p>this is a event in apogee. ob max.</p>
@@ -388,7 +358,7 @@ position: absolute;
 			<div class="event_head1">RAW</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/raw.png">
 				</div>
 				<div class="eve_det_back">
 					<p>this is a event in apogee. ob max.</p>
@@ -399,7 +369,7 @@ position: absolute;
 			<div class="event_head1">I-strike</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/istrike.png">
 				</div>
 				<div class="eve_det_back">
 					<p>this is a event in apogee. ob max.</p>
@@ -410,7 +380,7 @@ position: absolute;
 			<div class="event_head1">AIC</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/dhiti.jpg">
+					<img src="images/events/innovation.png">
 				</div>
 				<div class="eve_det_back">
 					<div>This event presents before you existing challenges faced by these companies who seek their solutions from you. These problems, which happen to be discipline specific (one need not belong are to be solved by participants in teams of 2-4 in about a month.</div>
