--- a/index.html
+++ b/index.html
@@ -733,11 +733,11 @@ marker = new google.maps.Marker({ position: new google.maps.LatLng(28.364, 75.58
 	}
 $(window).load(function()
 {
-	$('#loader').fadeOut();
-	setTimeout(function(){
-		$('#loader').remove();
-		aboutanim();
-	},250);
+	// $('#loader').fadeOut();
+	// setTimeout(function(){
+	// 	$('#loader').remove();
+	// 	aboutanim();
+	// },250);
 });
 </script>
 
