--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ body{
 	   <div class="dot"></div>
 	   <div class="outline"><span></span></div>
 	</div>
-	<img src="images/loader.png" class="abs_center">
+	<!-- <img src="images/loader.png" class="abs_center"> -->
 </div>
 
 <div id="about" class="div_content"  style="display:block;">
@@ -771,7 +771,6 @@ $('#regf').submit(function(e){
 	}
 $(window).load(function()
 {
-
 	$('#loader').fadeOut();
 	setTimeout(function(){
 		$('#loader').remove();
