--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta property="og:site_name" content="APOGEE 2016 Intro">
 	<meta property="og:url" content="http://www.bits-apogee.org/">
 	<meta property="og:description" content="Apogee, the tchnical festival of BITS Pilani, is a large scale event that has attracted the connoisseurs of engineering and technology over years. It represents the zenith of science and engineering in a landscape of future visionaries and scientists.">
-	<meta property="og:image" content="http://www.bits-apogee.org/intro/images/fbshare.jpg">
+	<meta property="og:image" content="http://www.bits-apogee.org/intro2016/images/fbshare.jpg">
 	<meta property="og:type" content="website">
 
 
@@ -524,7 +524,7 @@ body{
 				</div>
 				<div class="eve_det_back">
 					<div>
-						A robot may not injure a human being or, through inaction, allow a human being to come to harm. A robot must obey any orders given to it by human beings, except where such orders would conflict with the First Law. A robot must protect its own existence as long as such protection does not conflict with the First or Second Law.1942: Asimov formulates the Laws of Robotics. Apogee 2014 redefines the third-A robot must protect its own existence; to hell with everything else.
+						A robot may not injure a human being or, through inaction, allow a human being to come to harm. A robot must obey any orders given to it by human beings, except where such orders would conflict with the First Law. A robot must protect its own existence as long as such protection does not conflict with the First or Second Law.1942: Asimov formulates the Laws of Robotics.
 					</div>
 				</div>
 			</div>
@@ -709,6 +709,8 @@ btnBack.click(function(event) {
 	var btn = $(this).parent();
     btn.removeClass('is-open');
 });
+
+console.log("Department of Visual Media, BITS Pilani: Smit, Prateek, Piyush, Abhinav, Pranjal( thoda sa :P)")
 </script>
 <script type="text/javascript">
 function initMap() {
