--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ body{
 			<div class="event_head1">Reverse Engineering</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
-					<img src="images/events/reverseEng.png">
+					<img src="images/events/reverseEng.jpg">
 				</div>
 				<div class="eve_det_back">
 					<div>Ever wondered how a mechanism works. Reverse Engineering brings you the opportunity to get your hands on the most complex mechanical units. Engineer your ways to revert the impossible.
