--- a/index.html
+++ b/index.html
@@ -31,13 +31,9 @@
 
 	<link rel="stylesheet" type="text/css" href="css/loader.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-
-	<script type="text/javascript" src="js/jquery.min(1.11.1).js"></script>
-
+	<link href='https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,800,900' rel='stylesheet' type='text/css'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js"></script> 
-	<!-- // <script type="text/javascript" src="js/customMap.js"></script> -->
 
 </head>
 <style>
