--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 	<meta property="og:site_name" content="APOGEE 2016 Intro">
 	<meta property="og:url" content="http://www.bits-apogee.org/">
 	<meta property="og:description" content="Apogee, the tchnical festival of BITS Pilani, is a large scale event that has attracted the connoisseurs of engineering and technology over years. It represents the zenith of science and engineering in a landscape of future visionaries and scientists.">
-	<meta property="og:image" content="http://www.bits-apogee.org/intro2016/images/fbshare.jpg">
+	<meta property="og:image" content="http://www.bits-apogee.org/2016/intro/images/fbshare.jpg">
 	<meta property="og:type" content="website">
+	<meta property="og:author" content="Department of Visual Media, BITS Pilani">
 
 
 
