--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<meta property="og:author" content="Department of Visual Media, BITS Pilani">
 
 
-
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" type="text/css" href="css/loader.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,800,900' rel='stylesheet' type='text/css'>
