--- a/index.html
+++ b/index.html
@@ -453,7 +453,10 @@ body{
 		<div id="arrowabout"></div>
 		<div id="abouthead">APOGEE 2016</div>
 		<div id="aboutdet">
-			Birla Institute of Technology and Science, Pilani is one of the most prestigious institutes in the country. Over years, BITS Pilani has maintained the reputation of imparting the right mix of education and experience that form the basis for achieving success in the world.<br><br>Apogee, the first ISO 9001:2008 certified technical fest in India, is a large scale event that has attracted the connoisseurs of engineering and technology over years. It represents the zenith of science and engineering in a landscape of future visionaries and scientists.
+			<p>Birla Institute of Technology and Science, Pilani is one of the most prestigious institutes in the country. Over years, BITS Pilani has maintained the reputation of imparting the right mix of education and experience that form the basis for achieving success in the world.<br><br>Apogee, the first ISO 9001:2008 certified technical fest in India, is a large scale event that has attracted the connoisseurs of engineering and technology over years. It represents the zenith of science and engineering in a landscape of future visionaries and scientists.</p>
+			<p style="padding-top:20px;">
+				<a href="http://bits-apogee.org/campusambassador/" style="color:#2D2D2D" target="_blank"><b>Click Here</b></a> to know the Campus Ambassador Internship Program for APOGEE 2016.  
+			</p>
 		</div>
 	</div>
 </div>
