--- a/index.html
+++ b/index.html
@@ -38,210 +38,7 @@
 </head>
 <style>
 
-@-webkit-keyframes slide {
-  0% {
-    -webkit-transform: scale(0, 0) translateY(0);
-            transform: scale(0, 0) translateY(0);
-  }
-  55%, 99.9% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-    background-color: #eee;
-  }
-  100%{
-  	-webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  	background-color: transparent;
-  }
-}
-@keyframes slide {
-  0% {
-    -webkit-transform: scale(0, 0) translateY(0);
-            transform: scale(0, 0) translateY(0);
-  }
-  55%, 99.99% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-    background-color: #eee;
-  }
-  100%{
-  	-webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  	background-color: transparent;
-  }
-}
-@-webkit-keyframes zoom {
-  0%, 55% {
-    width: 0;
-    height:0;
-  }
-  70%, 100% {
-    width: 100%;
-    height: 100%;
-  }
-}
-@keyframes zoom {
-  0%, 55% {
-    width: 0;
-    height:0;
-  }
-  70%, 100% {
-    width: 100%;
-    height: 100%;
-  }
-}
 
-body{
-	background-color: #f6f6f6;
-}
-.slide{
-	-webkit-transform: scale(0, 0) translateY(0);
-            transform: scale(0, 0) translateY(0);
-	-webkit-animation-name: slide;
-			animation-name: slide;
-	-webkit-animation-timing-function: ease;
-			animation-timing-function: ease;
-	-webkit-animation-duration: 4s;
-			animation-duration: 4s;
-			animation-fill-mode: forwards;
-}
-.zoom{
-	position: absolute;
-	top:0;
-	left:0;
-	right:0;
-	bottom: 0;
-	margin:auto;
-	width: 100%;
-	height: 100%;
-	-webkit-animation-name: zoom;
-			animation-name: zoom;
-	-webkit-animation-duration: 4s;
-			animation-duration: 4s;
-}
-
-.event_cont:nth-child(2), .event_cont:nth-child(2) .zoom {
-  -webkit-animation-delay: .2s;
-          animation-delay: .2s;
-}
-.event_cont:nth-child(3), .event_cont:nth-child(3) .zoom {
-  -webkit-animation-delay: .4s;
-          animation-delay: .4s;
-}
-.event_cont:nth-child(4),, .event_cont:nth-child(4) .zoom {
-  -webkit-animation-delay: .6s;
-          animation-delay: .6s;
-}
-.event_cont:nth-child(5), .event_cont:nth-child(5) .zoom {
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
-}
-.event_cont:nth-child(6), .event_cont:nth-child(6) .zoom {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-}
-.event_cont:nth-child(7), .event_cont:nth-child(7) .zoom {
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
-}
-/*Events*/
-#events{
-	background-color: #2c5773;
-}
-.event_cont{
-	position: relative;
-    display: inline-block;
-   	width: 400px;
-   	height: 300px;
-    padding: 10px 0;
-    overflow: hidden;
-    background-color: #eee;
-    background-position: bottom;
-    margin: 25px;
-    cursor: pointer;
-
-}
-
-.event_cont:hover>.event_head1
-{
-	transform:translateY(-61px);
-}
-
-.event_head1{
-	font-size: 20px;
-    line-height: 30px;
-    font-weight: bold;
-    height: 60px;
-    position: absolute;
-    bottom: -63px;
-    padding: 15px;
-    width: 100%;
-    color: #2c5773;
-    background:#e1e1e1;
-    z-index: 10;
-    transition:transform 300ms;
-    -webkit-transition:-webkit-transform 300ms;
-}
-
-
-.event_details{
-	position: absolute;
-	width: 100%;
-	left:0;
-	top: 0px;
-	bottom:0;
-	color: #eee;
-	text-align: left;
-	-webkit-transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), height 0.8s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-          transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), height 0.8s cubic-bezier(0.23, 1, 0.32, 1), transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-transform-origin: 50% 50%;
-      -ms-transform-origin: 50% 50%;
-          transform-origin: 50% 50%;
-
-}
-.event_details img{
-	max-width: none;
-	width: 100%;
-}
- .event_details:hover
-{
-	transform:translateY(-30px);
-}
-.eve_det_front{
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 100%;
-	cursor: pointer;
-}
-.eve_det_back{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	padding:30px;
-	font-size: 1.1em;
-	background-color: #f6f6f6;
-	color: #222;
-	-moz-backface-visibility: hidden;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-transform: translateZ(-2px) rotateX(180deg);
-			transform: translateZ(-2px) rotateX(180deg);
-	-webkit-transition: box-shadow 0.8s ease;
-			transition: box-shadow 0.8s ease;
-}
-
-.event_details.is-open .eve_det_front {
-  pointer-events: none;
-  line-height: 160px;
-}
-.event_details.is-open {
-  -webkit-transform: rotateX(180deg);
-          transform: rotateX(180deg);
-}
-/*Events End*/
 @media screen and (max-width: 650px){
 	.header .but_head {
 		font-size: 2em;
@@ -463,7 +260,7 @@ body{
 	<div class="div_title">Events</div>
 	<div class="contact_data">
 		<div class="event_cont slide">
-			<div class="event_head1">Hackthon</div>
+			<div class="event_head">Hackthon</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/hack.png">
@@ -474,7 +271,7 @@ body{
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head1">Reverse Engineering</div>
+			<div class="event_head">Reverse Engineering</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/reverseEng.jpg">
@@ -486,7 +283,7 @@ body{
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head1">Dhiti</div>
+			<div class="event_head">Dhiti</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/dhiti.png">
@@ -499,7 +296,7 @@ body{
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head1">FTGP</div>
+			<div class="event_head">FTGP</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/ftgp.png">
@@ -512,7 +309,7 @@ body{
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head1">RAW</div>
+			<div class="event_head">RAW</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/raw.png">
@@ -525,7 +322,7 @@ body{
 			</div>
 		</div>
 <!-- 		<div class="event_cont slide" style="display:none;">
-			<div class="event_head1">I-strike</div>
+			<div class="event_head">I-strike</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/istrike.png">
@@ -536,7 +333,7 @@ body{
 			</div>
 		</div> -->
 		<div class="event_cont slide">
-			<div class="event_head1">AIC</div>
+			<div class="event_head">AIC</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/innovation.png">
@@ -674,19 +471,6 @@ body{
 
 <script type="text/javascript" src="js/main.js"></script>
 <script>
-function addeventscolor()
-{
-	var t = $('.event_head');
-	len = t.length;
-	for (i=0;i<len;++i)
-	{
-		$(t[i]).css('background-color',colors[i]);
-	}
-}
-
-$(document).ready(function(){
-	addeventscolor();
-});
 
 function eventdinit()
 {
@@ -705,7 +489,7 @@ btnBack.click(function(event) {
     btn.removeClass('is-open');
 });
 
-console.log("Department of Visual Media, BITS Pilani: Smit, Prateek, Piyush, Abhinav, Pranjal( thoda sa :P)")
+console.log("Department of Visual Media, BITS Pilani: ","Developers: Smit, Prateek, Piyush, Abhinav, Pranjal( thoda sa :P)")
 </script>
 <script type="text/javascript">
 function initMap() {
