--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@ body{
 				</div>
 				</a>
 
-				<a href="http://www.twitter.com">
-				<div id="twitter" style="display:none;">
+				<a href="https://twitter.com/bitsapogee">
+				<div id="twitter" >
 					<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 56.693 56.693" class="ti" height="40" version="1.1" viewBox="0 0 56.7 56.7" width="40" xml:space="preserve"><style type="text/css">svg ti { cursor: pointer;transition: 200ms;transition-timing-function: ease-in-out;-webkit-transition: 200ms;-webkit-transition-timing-function: ease-in-out;}.ti:hover { fill: #4099ff;}</style><path d="M52.8 15.1c-1.8 0.8-3.8 1.3-5.8 1.6 2.1-1.2 3.7-3.2 4.4-5.6 -2 1.2-4.1 2-6.4 2.5 -1.8-2-4.5-3.2-7.4-3.2 -5.6 0-10.1 4.5-10.1 10.1 0 0.8 0.1 1.6 0.3 2.3 -8.4-0.4-15.8-4.4-20.8-10.6 -0.9 1.5-1.4 3.2-1.4 5.1 0 3.5 1.8 6.6 4.5 8.4 -1.7-0.1-3.2-0.5-4.6-1.3 0 0 0 0.1 0 0.1 0 4.9 3.5 9 8.1 9.9 -0.8 0.2-1.7 0.4-2.7 0.4 -0.7 0-1.3-0.1-1.9-0.2 1.3 4 5 6.9 9.4 7 -3.5 2.7-7.8 4.3-12.6 4.3 -0.8 0-1.6 0-2.4-0.1 4.5 2.9 9.8 4.5 15.5 4.5 18.6 0 28.8-15.4 28.8-28.8 0-0.4 0-0.9 0-1.3C49.8 18.9 51.5 17.1 52.8 15.1z"></path></svg>
 				</div>
 				</a>
