--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head">FTGP</div>
+			<div class="event_head">Full Throttle Grand Prix</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/ftgp.png">
@@ -309,7 +309,7 @@
 			</div>
 		</div>
 		<div class="event_cont slide">
-			<div class="event_head">RAW</div>
+			<div class="event_head">Robots At War</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/raw.png">
@@ -333,7 +333,7 @@
 			</div>
 		</div> -->
 		<div class="event_cont slide">
-			<div class="event_head">AIC</div>
+			<div class="event_head">Apogee Innovation Challenge</div>
 			<div class="event_details zoom">
 				<div class="eve_det_front">
 					<img src="images/events/innovation.png">
